test/variables/sungeun/refvar-assign-with-cast.good
refvar-assign-with-cast.chpl:2: error: Cannot set a non-const reference to a const variable.
