test/variables/sungeun/refvar-assign-with-cast.chpl
var x: int;
ref rx = x:uint;

